# dsp_doc

./: .gitignore  README.md  _quarto.yml  pre-render.py  pyproject.toml  report.qmd
_extensions/r-wasm/live/: live.lua
_site/: report.html
docs/: OV1 Arctic _Standalone_.html  OV1 Arctic.html  index.html
docs/essay/: PLAN.md  README.md  index.html
docs/essay/scripts/: boot.js
docs/essay/scripts/core/: audio.js  canvas.js  dsp.js  slider.js
docs/essay/scripts/figures/: 01-pressure.js  02-speed-of-sound.js  03-ping.js  04-echo.js  05-time-of-flight.js  06-spreading.js  07-resolution-problem.js  08-bandwidth.js  09-chirp.js  10-spectrogram.js  11-matched-filter.js  12-mf-with-noise.js  13-doppler.js  14-doppler-spectrum.js  15-pulse-train.js  16-coherent-integration.js  17-rd-map.js  18-detection-threshold.js  19-cfar.js  20-finale.js
docs/essay/styles/: essay.css
docs/report_files/libs/bootstrap/: bootstrap.min.css
docs/sonar/: __init__.py  detection.py  envelope.py  matched_filter.py  noise.py  receive.py  reverberation.py  waveform.py
essay/: PLAN.md
sonar/: constants.py  propagation.py  range_doppler.py  receive.py  reverberation.py  targets.py
tests/: test_cfar.py  test_matched_filter.py  test_range_doppler.py  test_waveform.py
